--- a/input.html
+++ b/input.html
@@ -6,6 +6,10 @@
   @import url('https://themes.googleusercontent.com/fonts/css?kit=7ebMze0MJP7bZu91CQ7uEDTuLqYM6x6ICRZT_kL-IXY');
 
   
+  body {
+    font-family: 'Times New Roman', Times, serif
+  }
+
   table td,
   table th {
     padding: 0
